--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,11 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.5.2"
 
-
-    // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.0"
+    // Kotlin
+    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
+    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
 
     //ViewModel
