--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,22 @@ android {
 
 dependencies {
     def nav_version = "2.5.2"
+    def version_moshi = "1.9.3"
+    def version_retrofit = "2.9.0"
+    def version_glide = "4.8.0"
+    def version_recyclerview = "1.1.0"
+
+    // Moshi
+    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
+
+    // Retrofit with Moshi Converter
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+
+//    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$version_glide"
+
 
     // Kotlin
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
