--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0' // Gradle
 
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
-    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
 
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+//    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
     // Moshi
 //    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
 
