--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
 
+    implementation "com.squareup.retrofit2:converter-gson:$version_retrofit"
+
 //    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
 
 
