--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,13 @@ plugins {
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'androidx.navigation.safeargs' version '2.5.3' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.7.21' apply false
 }
+     ext {
+         retrofit_version = "2.9.0"
+        kotlin_version = "1.7.10"
+         moshi_version  = "1.11.0"
+    }
+    dependencies {
+
+    }
