--- a/api/build.gradle
+++ b/api/build.gradle
@@ -11,8 +11,9 @@ java {
 }
 
     dependencies {
-        implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+        implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
 
+        implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
         api "com.squareup.retrofit2:retrofit:$retrofit_version"
         implementation("com.squareup.okhttp3:okhttp:4.9.0")
         implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
